SemanticAnalyzer/tests/fail/herencia_circular.java
class A extends B {
	var int a, b;
	
	A()
	{}

	dynamic boolean methoda1()
	{}

}

class B extends A {
	var boolean a, b;
	
	B()
	{}

	static void main()
	{}

	dynamic boolean methoda1()
	{}
}

class C extends B {

}


